Update Text Demo

--- a/products.html
+++ b/products.html
@@ -89,11 +89,11 @@
                             </div>
                         </div>
                         <ul class="product__info">
-                            <li> <i class="fas fa-caret-right"></i> last <span>3</span> items</li>
+                            <li> <i class="fas fa-caret-right"></i> last <span>3</span> items.</li>
                             <li> <i class="fas fa-caret-right"></i> remaining <span>150</span> <img src="img/bc.svg"
-                                    width="20" alt=""> to get this item
+                                    width="20" alt=""> to get this item.
                             </li>
-                            <li> <i class="fas fa-caret-right"></i> you have <span>300</span> <img src="img/bc.svg"
+                            <li> <i class="fas fa-caret-right"></i> you have only <span>300</span> <img src="img/bc.svg"
                                     width="20" alt=""></li>
                         </ul>
                         <div class="product__btn">
@@ -129,11 +129,11 @@
                             </div>
                         </div>
                         <ul class="product__info">
-                            <li> <i class="fas fa-caret-right"></i> last <span>2</span> items</li>
+                            <li> <i class="fas fa-caret-right"></i> last <span>2</span> items.</li>
                             <li> <i class="fas fa-caret-right"></i> remaining <span>150</span> <img src="img/bc.svg"
-                                    width="20" alt=""> to get this item
+                                    width="20" alt=""> to get this item.
                             </li>
-                            <li> <i class="fas fa-caret-right"></i> you have <span>300</span> <img src="img/bc.svg"
+                            <li> <i class="fas fa-caret-right"></i> you have only <span>300</span> <img src="img/bc.svg"
                                     width="20" alt=""></li>
                         </ul>
                         <div class="product__btn">
@@ -169,11 +169,11 @@
                             </div>
                         </div>
                         <ul class="product__info">
-                            <li> <i class="fas fa-caret-right"></i> last <span>3</span> items</li>
+                            <li> <i class="fas fa-caret-right"></i> last <span>3</span> items.</li>
                             <li> <i class="fas fa-caret-right"></i> remaining <span>150</span> <img src="img/bc.svg"
-                                    width="20" alt=""> to get this item
+                                    width="20" alt=""> to get this item.
                             </li>
-                            <li> <i class="fas fa-caret-right"></i> you have <span>300</span> <img src="img/bc.svg"
+                            <li> <i class="fas fa-caret-right"></i> you have only <span>300</span> <img src="img/bc.svg"
                                     width="20" alt=""></li>
                         </ul>
                         <div class="product__btn">
