Update product card

--- a/products.html
+++ b/products.html
@@ -71,7 +71,7 @@
 							</div>
 						</div>
 						<div class="product__title">
-							<h5 class="mb-3 text-capitalize">product title here</h5>
+							<h5 class="text-capitalize">product title here</h5>
 						</div>
 						<div class="product__img">
 							<p class="tag">last <span>3</span> items</p>
@@ -117,7 +117,7 @@
 							</div>
 						</div>
 						<div class="product__title">
-							<h5 class="mb-3 text-capitalize">product title here</h5>
+							<h5 class="text-capitalize">product title here</h5>
 						</div>
 						<div class="product__img">
 							<p class="tag">last <span>2</span> items</p>
@@ -163,7 +163,7 @@
 							</div>
 						</div>
 						<div class="product__title">
-							<h5 class="mb-3 text-capitalize">product title here</h5>
+							<h5 class="text-capitalize">product title here</h5>
 						</div>
 						<div class="product__img">
 							<p class="tag">last <span>3</span> items</p>
