Create Redeem Page

--- a/products.html
+++ b/products.html
@@ -99,7 +99,7 @@
 							</li>
 						</ul>
 						<div class="product__btn">
-							<button>redeem</button>
+							<a href="redeem.html">redeem</a>
 						</div>
 					</div>
 					<!-- /.product -->
@@ -145,7 +145,7 @@
 							</li>
 						</ul>
 						<div class="product__btn">
-							<button>redeem</button>
+							<a href="redeem.html">redeem</a>
 						</div>
 					</div>
 					<!-- /.product -->
@@ -191,7 +191,7 @@
 							</li>
 						</ul>
 						<div class="product__btn">
-							<button>redeem</button>
+							<a href="redeem.html">redeem</a>
 						</div>
 					</div>
 					<!-- /.product -->
