--- a/redeem.html
+++ b/redeem.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="padel">
-	<title>Bandeja - Checkout</title>
+	<title>Bandeja - Redeem</title>
 	<link rel="shortcut icon" href="img/favicon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:400,600,700&amp;display=swap">
@@ -50,17 +50,14 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i
-									class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase active" href="profile.html"><i
-									class="far fa-user"></i>my
+						<li class="item"><a class="link text-uppercase active" href="profile.html"><i class="far fa-user"></i>my
 								profile</a></li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i
-									class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -78,8 +75,7 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
-						class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
 				</div>
 			</div>
 		</div>
@@ -93,32 +89,35 @@
 				<div class="failure-icon d-none">
 					<i class="fas fa-times-circle"></i>
 				</div>
-				<p class="success-txt">payment succesfuly</p>
-				<p class="failure-txt d-none">Failed to pay</p>
+				<p class="success-txt">Redeem under review
+					<span>Thank you for redeeming,<br> you will receive your first email within the next 24 hours.</span>
+				</p>
+				<p class="failure-txt d-none">Failed to redeem
+					<span>Failed msg is here</span>
+				</p>
 			</div>
 			<!-- /.msg -->
 			<div class="table__info mt-5">
 				<table class="table table-bordered">
 					<tbody>
 						<tr>
-							<td>Name</td>
-							<td>John Doe</td>
+							<td>Product</td>
+							<td>
+								<img src="img/products/prod-1.jpg" width="45" class="border rounded-circle mr-1" alt="">
+								<span>product title is here</span>
+							</td>
 						</tr>
 						<tr>
 							<td>Date</td>
 							<td>21-6-2021</td>
 						</tr>
 						<tr>
-							<td>operation No.</td>
+							<td>Product ID.</td>
 							<td>#78347</td>
 						</tr>
 						<tr>
-							<td>Bandeja coins</td>
-							<td><img src="img/bc.svg" width="25" alt=""> 4000</td>
-						</tr>
-						<tr>
-							<td><strong>Amount paid</strong></td>
-							<td><strong>12,500 EGP</strong></td>
+							<td><strong>Price</strong></td>
+							<td><img src="img/gc.svg" width="25" alt=""> <strong>4000</strong></td>
 						</tr>
 					</tbody>
 				</table>
