Add all prefixes

--- a/checkout-status.html
+++ b/checkout-status.html
@@ -50,17 +50,14 @@
 							draggable="false"></a></div>
 				<nav class="nav">
 					<ul class="links d-flex align-items-center">
-						<li class="item"><a class="link text-uppercase" href="index.html"><i
-									class="fas fa-home"></i>Home</a></li>
+						<li class="item"><a class="link text-uppercase" href="index.html"><i class="fas fa-home"></i>Home</a></li>
 						<li class="item"><a class="link text-uppercase" href="leaderboard.html"><i
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase active" href="profile.html"><i
-									class="far fa-user"></i>my
+						<li class="item"><a class="link text-uppercase" href="profile.html"><i class="far fa-user"></i>my
 								profile</a></li>
-						<li class="item"><a class="link text-uppercase" href="news.html"><i
-									class="far fa-user"></i>news</a></li>
+						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
 					</ul>
@@ -78,8 +75,7 @@
 						<path d="M8.21739 20.087V12.7826H7.59959e-07" stroke="white" stroke-width="2"></path>
 						<path d="M8.21739 0V7.30435H7.59959e-07" stroke="white" stroke-width="2"></path>
 					</svg></i>
-				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span
-						class="line"></span>
+				<div class="bars d-lg-none"><span class="line"></span><span class="line"></span><span class="line"></span>
 				</div>
 			</div>
 		</div>
