--- a/redeem.html
+++ b/redeem.html
@@ -55,8 +55,9 @@
 									class="fas fa-chalkboard"></i>leaderboard</a></li>
 						<li class="item"><a class="link text-uppercase" href="challenges.html"><i
 									class="fas fa-chess-board"></i>challenges</a></li>
-						<li class="item"><a class="link text-uppercase active" href="profile.html"><i class="far fa-user"></i>my
-								profile</a></li>
+						<li class="item"><a class="link text-uppercase" href="profile.html">
+								<i class="far fa-user"></i>my profile</a>
+						</li>
 						<li class="item"><a class="link text-uppercase" href="news.html"><i class="far fa-user"></i>news</a></li>
 						<li class="item"><a class="link text-uppercase" href="login.html"><i
 									class="fas fa-sign-in-alt"></i>login</a></li>
