--- a/products.html
+++ b/products.html
@@ -6,13 +6,16 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="padel">
-	<title>Bandeja - Products</title>
+	<title>Bandeja - Profile</title>
 	<link rel="shortcut icon" href="img/favicon.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/css/select2.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis:400,600,700&amp;display=swap">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&amp;display=swap">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -40,8 +43,7 @@
 						<path d="M15.8732 1.27464H23V8.09154" stroke="white" stroke-width="3"></path>
 						<path d="M22.8451 15.3732L22.8451 22.5L16.0282 22.5" stroke="white" stroke-width="3"></path>
 						<path d="M8.12676 22.3451L1 22.3451L1 15.5282" stroke="white" stroke-width="3"></path>
-						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3">
-						</path>
+						<path d="M1.15493 8.24648L1.15493 1.11971L7.97183 1.11971" stroke="white" stroke-width="3"></path>
 					</svg>
 					<svg id="shrink" width="21" height="21" viewBox="0 0 21 21" fill="none">
 						<path d="M12.7826 0V7.30435H21" stroke="white" stroke-width="2"></path>
@@ -54,6 +56,7 @@
 			</div>
 		</div>
 	</header>
+
 	<section class="products-page my-5">
 		<div class="container py-5 px-3">
 			<h1 class="stroked-title"><span>products</span></h1>
@@ -214,6 +217,7 @@
 			</ul>
 		</div>
 	</section>
+
 	<div class="sponsors my-5">
 		<div class="container">
 			<div class="sponsors-slider">
@@ -227,6 +231,7 @@
 			</div>
 		</div>
 	</div>
+
 	<footer class="footer">
 		<div class="container">
 			<div class="text-inner">
@@ -234,13 +239,16 @@
 			</div>
 		</div>
 	</footer>
+
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/js/select2.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 	<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.3/lib/darkmode-js.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.6/venobox.min.js"></script>
 	<script src="js/all.min.js"></script>
 	<script>
 		$(".product__slider").slick({
