Add dropdown likes to likes holder

--- a/ajax-post.html
+++ b/ajax-post.html
@@ -25,15 +25,15 @@
 					<div class="post__highlights">
 						<div class="row">
 							<div class="col-3">
-								<div>
-									<button class="likes-list-btn" data-toggle="modal" data-target="#likes-holder"><span
-											class="icon material-icons">thumb_up</span><span>15</span>
-										<ul class="summary-likes">
-											<li>someone no.1</li>
-											<li>someone no.2</li>
-											<li>someone no.3</li>
-										</ul>
+								<div class="likes-dropdown">
+									<button class="likes-btn" data-toggle="modal" data-target="#likes-holder">
+										<span class="icon material-icons">thumb_up</span><span>15</span>
 									</button>
+									<ul class="summary-likes">
+										<li><a href="profile.html">someone no.1</a></li>
+										<li><a href="profile.html">someone no.2</a></li>
+										<li><a href="profile.html">someone no.3</a></li>
+									</ul>
 								</div>
 							</div>
 							<div class="col-9 text-right">
