--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="text-section mt-5" data-aos="fade" data-aos-offset="0" data-aos-duration="2000">
+	<section class="text-section mt-5">
 		<div class="container p-4">
 			<div class="text-area">
 				<h2 class="text-title text-uppercase stroked-title mb-4"><span>how the rating system works?</span></h2>
