--- a/login.html
+++ b/login.html
@@ -56,7 +56,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="log-page" data-aos="fade-up" data-aos-offset="0" data-aos-duration="700">
+	<section class="log-page">
 		<div class="container">
 			<div class="row py-5">
 				<div class="col-lg-6">
