Convert img to webp

--- a/ajax-post.html
+++ b/ajax-post.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row py-5 m-0">
 			<div class="col-lg-8 p-0">
-				<div class="media h-100"><img src="img/homeSlider/slide03.jpg" /></div>
+				<div class="media h-100"><img src="img/homeSlider/slide03.webp" /></div>
 			</div>
 			<div class="col-lg-4 p-0">
 				<div class="post h-100">
