--- a/index.html
+++ b/index.html
@@ -79,12 +79,16 @@
 					<div class="row align-items-start">
 						<div class="col-lg-7">
 							<div class="image-slider h-100">
-								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide01.jpg" alt="image alt"></div>
-								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide02.jpg" alt="image alt"></div>
-								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide03.jpg" alt="image alt"></div>
-								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide04.jpeg" alt="image alt">
+								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide01.webp" alt="image alt">
 								</div>
-								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide05.jpg" alt="image alt"></div>
+								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide02.webp" alt="image alt">
+								</div>
+								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide03.webp" alt="image alt">
+								</div>
+								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide04.webp" alt="image alt">
+								</div>
+								<div class="slider--item"><img class="img-fluid" src="img/homeSlider/slide05.webp" alt="image alt">
+								</div>
 							</div>
 						</div>
 						<div class="col-lg-5">
